--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
     "@angular/google-maps": "^16.2.5",
-    "@angular/material": "^16.2.5",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@igniteui/material-icons-extended": "^3.0.0",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
+    "fflate": "^0.7.3",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^16.1.1",
     "leaflet": "^1.9.4",
+    "minireset.css": "~0.0.4",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primeng": "^16.3.1",
@@ -36,6 +40,8 @@
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@igniteui/angular-schematics": "~16.0.1200",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.6",
     "jasmine-core": "~4.6.0",
