--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "angular-responsive-carousel": "^2.1.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.0",
     "leaflet": "^1.9.4",
